--- a/sass/style2.scss
+++ b/sass/style2.scss
@@ -17,7 +17,7 @@ html, body {
 
 @import "./utils/mixin";
 @import "./utils/variables";
-@import "./layout/header2.scss";
+@import "./layout/header2";
 @import "./components/btn";
 @import "./components/heartbtn";
 @import "./pages/restaurants/banniere";
