--- a/sass/components/_heartbtn.scss
+++ b/sass/components/_heartbtn.scss
@@ -82,6 +82,7 @@
           }
 
       } 
+      /*-------------------------DESKTOP------------------------------*/
       @media (min-width: 770px) {
         font-size: 2vw;
         display: flex;
@@ -101,18 +102,21 @@
             top: 3vw;
             left: 2vw;
             opacity: 1;
+            font-size: 2vw;
 
             &:hover{
+                font-size: 2vw;
                 opacity: 0;
             }
         }
         i.fas{
             opacity: 0;
             position: absolute;
+            font-size: 2vw;
             top: 3vw;
             left: 19vw;
             @include grad;
-            -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             
             
@@ -177,7 +181,7 @@
     right: 5vw;
     height: 15vw;
     width: 9vw;
-    top: 5.5vw;
+    top: 2vw;
     border: none;
     background:rgba(0, 0, 0, 0);
     cursor: pointer;
@@ -207,5 +211,46 @@
             
         }
       }    
+}
+/*------------------DESKTOP----------------------*/
+@media (min-width: 770px) {
+    font-size: 3vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 4vw;
+    border: none;
+    background:rgba(0, 0, 0, 0);
+    cursor: pointer;
+    i.far{
+        color: rgb(104, 101, 101);
+        position: absolute;
+        top: 0.5vw;
+        opacity: 1;
+        &:hover{
+            opacity: 0;
+        }
+    }
+    i.fas{
+        opacity: 0;
+        position: absolute;
+        top: 0.5vw;
+        @include grad;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        
+       
+        &:hover{
+            font-size: 3vw;
+            transition: 600ms;
+            opacity: 1;
+            
+            
+        }
+      }  
+    
 }
 }
