--- a/sass/layout/_header2.scss
+++ b/sass/layout/_header2.scss
@@ -1,6 +1,7 @@
 
+@media (max-width: 498px){
 header{
-    @media (max-width: 498px){
+   
     background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
@@ -28,105 +29,110 @@ header{
     }
     }
     
-
-
-    i.fas{
-        display: block;
-        color: gray;
-        text-decoration: none;
-        
-
-    }
-    
-    span{
-        display:block;
-        width: 20px;
-        margin-right: 5vw;
-    }
-
-   
-
-}
-#head{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-
-}
-
-.logo{
-    height: 10vw;
-    margin-right: 30vw;
-    padding-left: 9vw;
-}
-/*---------------------TABLETTE--------------------------------*/
-@media (min-width: 497px) and (max-width: 769px){
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-    padding: 10px 16px;
-    height: 40px;
-    width: 100%;
-    padding-top: 50px;
-    padding-left: 8vw;
-    padding-bottom:50px ;
-            
-    a{
-        text-decoration: none;
-    &:link{
-        text-decoration: none;
-    }
-    &:visited{
-        text-decoration: none;
-    }
-    &:hover{
-        text-decoration: none;
-    }
-    &:active{
-        text-decoration: none;
-    }
-    }
-    
-
-
     i.fas{
         display: block;
         color: gray;
         text-decoration: none;
         font-size: 4vw;
         
-
-    }
-    
-    span{
+        
+        }
+        
+        span{
         display:block;
         width: 20px;
-        margin-right: 5vw;
-    }
+        margin-right: 30vw;
+        }
+        
+        
+        
+        }
+        #head{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        
+        }
+        
+        .logo{
+        height: 4vw;
+        margin-right: 50vw;
+        transform: scale(3);
+        }
+}
+/*---------------------TABLETTE--------------------------------*/
+@media (min-width: 497px) and (max-width: 769px)
+{
+header{
+background-color: rgb(255, 255, 255);
+display: flex;
+align-items: center;
+justify-content: space-evenly;
+flex-direction: row;
+padding: 20px 20px;
+height: 8vw;
+width: 100%;
 
-   
+
+    
+a{
+text-decoration: none;
+&:link{
+text-decoration: none;
+}
+&:visited{
+text-decoration: none;
+}
+&:hover{
+text-decoration: none;
+}
+&:active{
+text-decoration: none;
+}
+}
+
+
+
+i.fas{
+display: block;
+color: gray;
+text-decoration: none;
+font-size: 3vw;
+
+
+}
+
+span{
+display:block;
+width: 20px;
+margin-right: 27vw;
+}
+
+
 
 }
 #head{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
+width: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: row;
 
 }
 
 .logo{
-    height: 10vw;
-    margin-right: 30vw;
-    padding-left: 9vw;
+height: 4vw;
+margin-right: 36vw;
+transform: scale(1.2);
+
+
+}
 }
 /*------------------DESKTOP----------------------*/
 @media (min-width: 770px) {
+    header{
     background-color: rgb(255, 255, 255);
         display: flex;
         align-items: center;
@@ -135,9 +141,7 @@ header{
         padding: 10px 16px;
         height: 8vw;
         width: 100%;
-        border-bottom-color: rgba(58, 58, 58, 0.288);
-        border-bottom-style: solid;
-        border-width:5px;
+       
        
             
     a{
@@ -170,7 +174,7 @@ header{
     span{
         display:block;
         width: 20px;
-        margin-right: 30vw;
+        margin-right: 35vw;
     }
 
    
@@ -187,7 +191,8 @@ header{
 
 .logo{
     height: 4vw;
-    margin-right: 36vw;
+    margin-right: 40vw;
+    
 }
 }
 
