--- a/sass/pages/home/_fonctionnement.scss
+++ b/sass/pages/home/_fonctionnement.scss
@@ -37,8 +37,8 @@ ol{
         position: absolute;
         color: rgb(255, 255, 255);
         content: counter(item);
-        height: 20px;
-        width: 20px;
+        height: 25px;
+        width: 25px;
         vertical-align: top;
         text-align: center;
         background: $primary;
@@ -57,6 +57,7 @@ ol{
     }
 &:hover{
     background-color: lighten($primary, 35);
+    @include cardhover;
     i.fas, i.fa{
         color: $primary;
     }
@@ -123,6 +124,7 @@ ol{
 
 &:hover{
     background-color: lighten($primary, 35);
+    @include cardhover;
     i.fas, i.fa{
         color: $primary;
     }
@@ -131,6 +133,7 @@ ol{
 }
 
 }
+/*----------------------------TABLETTE----------------------------*/
 @media (min-width: 770px) {
     h2{
         font-size: 2vw;
@@ -196,6 +199,8 @@ ol{
     
     &:hover{
         background-color: lighten($primary, 35);
+        @include cardhover;
+
         i.fas, i.fa{
             color: $primary;
             
