--- a/sass/pages/restaurants/_content.scss
+++ b/sass/pages/restaurants/_content.scss
@@ -77,7 +77,9 @@
                     }
                 }
 
-
+                &:hover{
+                    @include cardhover
+                }
             &:hover .check{
                         
                 transition: 0.3s;
@@ -181,7 +183,7 @@
                 justify-content: space-between;
                 margin-left: 3vw;
                 font-family: 'Shrikhand', cursive;
-                font-size: 7vw;
+                font-size: 5vw;
                 width: 100%;
                 animation-name: fadein;
                 animation-duration: 1s;
@@ -207,11 +209,12 @@
                         animation-name: fadein;
                         animation-duration: 1s;
                         animation-timing-function: ease-in-out;
+                        font-size: 3vw;
                     }
                 .container{
                     position: relative;
                     background-color: white;
-                    border-radius: 40px;
+                    border-radius: 30px;
                     width: 90%;
                     height: 17vw; 
                     margin: 20px;
@@ -242,7 +245,9 @@
                                 opacity: 1;
                             }
                         }
-        
+                        &:hover{
+                            @include cardhover
+                        }
         
                     &:hover .check{
                                 
@@ -256,7 +261,7 @@
                             
                         }
                         &:hover > .price{
-                            left:58vw;
+                            left:55vw;
                         }
                         &:hover > .sub{
                             width: 65%;
@@ -296,7 +301,7 @@
                     .bold{
                         margin-top: 2vw;
                         font-weight: bolder;
-                        font-size: 4.3vw;
+                        font-size: 3vw;
                         display: flex;
                         justify-content: flex-start;
                         }
@@ -306,11 +311,11 @@
                         text-overflow: ellipsis;
                         white-space: nowrap;
                         overflow: hidden;
-                        font-size: 3.5vw;
+                        font-size: 2.5vw;
                         } 
                       
                     .price{
-                        font-size: 3vw;
+                        font-size: 2.6vw;
                         font-weight: bolder;
                         display: flex;
                         justify-content:flex-end;
@@ -330,5 +335,176 @@
 }
 /*------------------DESKTOP----------------------*/
 @media (min-width: 770px) {
+    .title{
     
+        background-color: rgb(238, 238, 238);
+        padding-top: 20px;
+        border-top-left-radius: 50px;
+        border-top-right-radius: 50px;
+        position: relative;
+        width: 100%;
+        margin-top: 20vw;
+        padding-bottom: 2vw;
+        h1{
+            display: flex;
+            align-self: center;
+            justify-content: space-between;
+            margin-left: 3vw;
+            font-family: 'Shrikhand', cursive;
+            font-size: 3vw;
+            width: 100%;
+            animation-name: fadein;
+            animation-duration: 1s;
+            animation-timing-function: ease-in-out;
+            
+            .heart{
+                @include heartbtn2;
+                animation-name: fadein;
+                animation-duration: 1s;
+                animation-timing-function: ease-in-out;
+               }
+            }
+        }
+        
+        .first-container{
+            background-color: rgb(238, 238, 238);
+           
+            .first-container-wrapper{
+                display: flex;
+                flex-direction: column;
+                .three{
+                    display: flex;
+                    flex-direction: row;
+                }
+                
+    
+                h2, h2, h3, h4{
+                    font-weight: 2vw;
+                    @include tittles;
+                    animation-name: fadein;
+                    animation-duration: 1s;
+                    animation-timing-function: ease-in-out;
+                }
+            .container{
+                position: relative;
+                background-color: white;
+                border-radius: 20px;
+                width: 30%;
+                height: 7vw; 
+                margin: 1vw;
+                @include shadows;
+                display: flex;
+                justify-content: flex-start;
+                flex-direction: column;
+                overflow: hidden;
+                cursor: pointer;
+                opacity: 1;
+                animation-name: fadein;
+                animation-timing-function: ease-in-out;
+                animation-iteration-count: 1;
+                animation-duration: 2s;
+                margin-left: 2vw;
+                
+                    
+                    
+                    @keyframes fadein {
+                        0% {
+                            opacity: 0;
+                        }
+                        80%{
+                            opacity: 0;
+                        }
+     
+                        100% {
+                            opacity: 1;
+                        }
+                    }
+    
+                &:hover{
+                   @include cardhover
+                }
+                &:hover .check{
+                            
+                    transition: 0.3s;
+                    right: 0;
+                    transition: 500ms ease-in-out;
+                        i.fas {
+                            transform: rotate(360deg);
+                            transition: 500ms linear;
+                        }
+                        
+                    }
+                    &:hover > .price{
+                        right:8vw;
+                    }
+                    &:hover > .sub{
+                        width: 50%;
+                        
+                    }
+    
+                   
+                    
+                .check{
+                        
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 20%;
+                    height: 100%;
+                    position:absolute;
+                    right: -150px;
+                    font-size: 8vw;
+                    margin-left: 75vw;
+                    border-bottom-right-radius: 20px;
+                    border-top-right-radius: 20px;
+                    border: none;
+                    color: white;
+                    background-color:#99E2D0; 
+                    font-size: 3vw;             
+    
+                }
+    
+              
+    
+            }            
+    
+                p{
+                    margin: 1vw;
+                    margin-left: 3vw;   
+    
+                    }
+                .bold{
+                    margin-top: 0.9vw;
+                    font-weight: bolder;
+                    font-size: 1.4vw;
+                    display: flex;
+                    justify-content: flex-start;
+                    }
+    
+                .sub{
+                    width: 80%;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    font-size: 01vw;
+                    } 
+                  
+                .price{
+                    font-size: 1vw;
+                    font-weight: bolder;
+                    display: flex;
+                    justify-content:flex-end;
+                    flex-wrap: wrap;
+                    width: 10%;
+                    position:absolute;
+                    top: 3.5vw;
+                    right: 4vw;
+                        
+                    }
+                   
+                    
+                   
+                }
+    
+            }    
 }
