--- a/sass/pages/restaurants/_end.scss
+++ b/sass/pages/restaurants/_end.scss
@@ -21,8 +21,14 @@
         
 
     }
-} 
+
 /*------------------DESKTOP----------------------*/
 @media (min-width: 770px) {
-    
+    display: flex;
+        justify-content: center;
+        align-content: center;
+        padding-top: 50px;
+        padding-bottom: 50px;
+
+}
 }
