--- a/style2.css
+++ b/style2.css
@@ -15,10 +15,6 @@ html img, body img {
   object-fit: cover;
 }
 
-header {
-  /*---------------------TABLETTE--------------------------------*/
-  /*------------------DESKTOP----------------------*/
-}
 @media (max-width: 498px) {
   header {
     background-color: white;
@@ -51,25 +47,29 @@ header {
     display: block;
     color: gray;
     text-decoration: none;
+    font-size: 4vw;
   }
   header span {
     display: block;
     width: 20px;
-    margin-right: 5vw;
+    margin-right: 30vw;
+  }
+
+  #head {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .logo {
+    height: 4vw;
+    margin-right: 50vw;
+    transform: scale(3);
   }
 }
-header #head {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-}
-header .logo {
-  height: 10vw;
-  margin-right: 30vw;
-  padding-left: 9vw;
-}
+/*---------------------TABLETTE--------------------------------*/
 @media (min-width: 497px) and (max-width: 769px) {
   header {
     background-color: white;
@@ -77,12 +77,9 @@ header .logo {
     align-items: center;
     justify-content: space-evenly;
     flex-direction: row;
-    padding: 10px 16px;
-    height: 40px;
+    padding: 20px 20px;
+    height: 8vw;
     width: 100%;
-    padding-top: 50px;
-    padding-left: 8vw;
-    padding-bottom: 50px;
   }
   header a {
     text-decoration: none;
@@ -103,26 +100,29 @@ header .logo {
     display: block;
     color: gray;
     text-decoration: none;
-    font-size: 4vw;
+    font-size: 3vw;
   }
   header span {
     display: block;
     width: 20px;
-    margin-right: 5vw;
+    margin-right: 27vw;
+  }
+
+  #head {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .logo {
+    height: 4vw;
+    margin-right: 36vw;
+    transform: scale(1.2);
   }
 }
-header #head {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-}
-header .logo {
-  height: 10vw;
-  margin-right: 30vw;
-  padding-left: 9vw;
-}
+/*------------------DESKTOP----------------------*/
 @media (min-width: 770px) {
   header {
     background-color: white;
@@ -133,9 +133,6 @@ header .logo {
     padding: 10px 16px;
     height: 8vw;
     width: 100%;
-    border-bottom-color: rgba(58, 58, 58, 0.288);
-    border-bottom-style: solid;
-    border-width: 5px;
   }
   header a {
     text-decoration: none;
@@ -161,21 +158,22 @@ header .logo {
   header span {
     display: block;
     width: 20px;
-    margin-right: 30vw;
+    margin-right: 35vw;
+  }
+
+  #head {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .logo {
+    height: 4vw;
+    margin-right: 40vw;
   }
 }
-header #head {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-}
-header .logo {
-  height: 4vw;
-  margin-right: 36vw;
-}
-
 .explorer {
   color: floralwhite;
   font-weight: bold;
@@ -198,13 +196,13 @@ header .logo {
   .explorer {
     color: floralwhite;
     font-weight: bold;
-    width: 50%;
-    height: 8vw;
+    width: 30%;
+    height: 4vw;
     border-radius: 40px;
     border: none;
     align-self: center;
     background: linear-gradient(#FF79DA, #9356DC);
-    font-size: 2vw;
+    font-size: 1.5vw;
   }
   .explorer:hover {
     filter: brightness(125%);
@@ -286,6 +284,7 @@ header .logo {
     animation-timing-function: ease-in-out;
   }
   .title h1 .heart {
+    /*------------------DESKTOP----------------------*/
     animation-name: fadein;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
@@ -337,7 +336,7 @@ header .logo {
     right: 5vw;
     height: 15vw;
     width: 9vw;
-    top: 5.5vw;
+    top: 2vw;
     border: none;
     background: rgba(0, 0, 0, 0);
     cursor: pointer;
@@ -365,6 +364,43 @@ header .logo {
     opacity: 1;
   }
 }
+@media (max-width: 498px) and (min-width: 770px) {
+  .title h1 .heart {
+    font-size: 3vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 4vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .title h1 .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 0.5vw;
+    opacity: 1;
+  }
+  .title h1 .heart i.far:hover {
+    opacity: 0;
+  }
+  .title h1 .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 0.5vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .title h1 .heart i.fas:hover {
+    font-size: 3vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
 @media (max-width: 498px) {
   .first-container {
     background-color: #eeeeee;
@@ -380,6 +416,18 @@ header .logo {
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
   }
+}
+@media (max-width: 498px) and (min-width: 770px) {
+  .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h3, .first-container .first-container-wrapper h4 {
+    font-size: 2vw;
+    color: #777777;
+    padding-bottom: 1px;
+    border-bottom: #99E2D0 solid 2px;
+    width: 4%;
+    margin-left: 6vw;
+  }
+}
+@media (max-width: 498px) {
   .first-container .first-container-wrapper .container {
     position: relative;
     background-color: white;
@@ -409,6 +457,10 @@ header .logo {
     100% {
       opacity: 1;
     }
+  }
+  .first-container .first-container-wrapper .container:hover {
+    transform: scale(1.08);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
   }
   .first-container .first-container-wrapper .container:hover .check {
     transition: 0.3s;
@@ -441,10 +493,14 @@ header .logo {
     color: white;
     background-color: #99E2D0;
   }
+}
+@media (max-width: 498px) {
   .first-container .first-container-wrapper p {
     margin: 1.5vw;
     margin-left: 3vw;
   }
+}
+@media (max-width: 498px) {
   .first-container .first-container-wrapper .bold {
     margin-top: 2vw;
     font-weight: bolder;
@@ -452,6 +508,8 @@ header .logo {
     display: flex;
     justify-content: flex-start;
   }
+}
+@media (max-width: 498px) {
   .first-container .first-container-wrapper .sub {
     width: 80%;
     text-overflow: ellipsis;
@@ -459,6 +517,8 @@ header .logo {
     overflow: hidden;
     font-size: 3.5vw;
   }
+}
+@media (max-width: 498px) {
   .first-container .first-container-wrapper .price {
     font-size: 3vw;
     font-weight: bolder;
@@ -489,13 +549,14 @@ header .logo {
     justify-content: space-between;
     margin-left: 3vw;
     font-family: "Shrikhand", cursive;
-    font-size: 7vw;
+    font-size: 5vw;
     width: 100%;
     animation-name: fadein;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
   }
   .title h1 .heart {
+    /*------------------DESKTOP----------------------*/
     animation-name: fadein;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
@@ -547,7 +608,7 @@ header .logo {
     right: 5vw;
     height: 15vw;
     width: 9vw;
-    top: 5.5vw;
+    top: 2vw;
     border: none;
     background: rgba(0, 0, 0, 0);
     cursor: pointer;
@@ -575,6 +636,43 @@ header .logo {
     opacity: 1;
   }
 }
+@media (min-width: 497px) and (max-width: 769px) and (min-width: 770px) {
+  .title h1 .heart {
+    font-size: 3vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 4vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .title h1 .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 0.5vw;
+    opacity: 1;
+  }
+  .title h1 .heart i.far:hover {
+    opacity: 0;
+  }
+  .title h1 .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 0.5vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .title h1 .heart i.fas:hover {
+    font-size: 3vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
 @media (min-width: 497px) and (max-width: 769px) {
   .first-container {
     background-color: #eeeeee;
@@ -589,11 +687,24 @@ header .logo {
     animation-name: fadein;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
+    font-size: 3vw;
   }
+}
+@media (min-width: 497px) and (max-width: 769px) and (min-width: 770px) {
+  .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h3, .first-container .first-container-wrapper h4 {
+    font-size: 2vw;
+    color: #777777;
+    padding-bottom: 1px;
+    border-bottom: #99E2D0 solid 2px;
+    width: 4%;
+    margin-left: 6vw;
+  }
+}
+@media (min-width: 497px) and (max-width: 769px) {
   .first-container .first-container-wrapper .container {
     position: relative;
     background-color: white;
-    border-radius: 40px;
+    border-radius: 30px;
     width: 90%;
     height: 17vw;
     margin: 20px;
@@ -621,6 +732,10 @@ header .logo {
       opacity: 1;
     }
   }
+  .first-container .first-container-wrapper .container:hover {
+    transform: scale(1.08);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+  }
   .first-container .first-container-wrapper .container:hover .check {
     transition: 0.3s;
     right: 0;
@@ -631,7 +746,7 @@ header .logo {
     transition: 500ms linear;
   }
   .first-container .first-container-wrapper .container:hover > .price {
-    left: 58vw;
+    left: 55vw;
   }
   .first-container .first-container-wrapper .container:hover > .sub {
     width: 65%;
@@ -652,26 +767,34 @@ header .logo {
     color: white;
     background-color: #99E2D0;
   }
+}
+@media (min-width: 497px) and (max-width: 769px) {
   .first-container .first-container-wrapper p {
     margin: 1.5vw;
     margin-left: 3vw;
   }
+}
+@media (min-width: 497px) and (max-width: 769px) {
   .first-container .first-container-wrapper .bold {
     margin-top: 2vw;
     font-weight: bolder;
-    font-size: 4.3vw;
+    font-size: 3vw;
     display: flex;
     justify-content: flex-start;
   }
+}
+@media (min-width: 497px) and (max-width: 769px) {
   .first-container .first-container-wrapper .sub {
     width: 80%;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    font-size: 3.5vw;
+    font-size: 2.5vw;
   }
+}
+@media (min-width: 497px) and (max-width: 769px) {
   .first-container .first-container-wrapper .price {
-    font-size: 3vw;
+    font-size: 2.6vw;
     font-weight: bolder;
     display: flex;
     justify-content: flex-end;
@@ -683,8 +806,291 @@ header .logo {
   }
 }
 /*------------------DESKTOP----------------------*/
+@media (min-width: 770px) {
+  .title {
+    background-color: #eeeeee;
+    padding-top: 20px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    position: relative;
+    width: 100%;
+    margin-top: 20vw;
+    padding-bottom: 2vw;
+  }
+  .title h1 {
+    display: flex;
+    align-self: center;
+    justify-content: space-between;
+    margin-left: 3vw;
+    font-family: "Shrikhand", cursive;
+    font-size: 3vw;
+    width: 100%;
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+  .title h1 .heart {
+    /*------------------DESKTOP----------------------*/
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+}
+@media (min-width: 770px) and (max-width: 498px) {
+  .title h1 .heart {
+    font-size: 8vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 7vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .title h1 .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 4vw;
+    opacity: 1;
+  }
+  .title h1 .heart i.far:hover {
+    opacity: 0;
+  }
+  .title h1 .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 4vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .title h1 .heart i.fas:hover {
+    font-size: 8vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
+@media (min-width: 770px) and (min-width: 499px) and (max-width: 769px) {
+  .title h1 .heart {
+    font-size: 8vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 2vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .title h1 .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 4vw;
+    opacity: 1;
+  }
+  .title h1 .heart i.far:hover {
+    opacity: 0;
+  }
+  .title h1 .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 4vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .title h1 .heart i.fas:hover {
+    font-size: 8vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
+@media (min-width: 770px) and (min-width: 770px) {
+  .title h1 .heart {
+    font-size: 3vw;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 5vw;
+    height: 15vw;
+    width: 9vw;
+    top: 4vw;
+    border: none;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
+  }
+  .title h1 .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 0.5vw;
+    opacity: 1;
+  }
+  .title h1 .heart i.far:hover {
+    opacity: 0;
+  }
+  .title h1 .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 0.5vw;
+    background: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .title h1 .heart i.fas:hover {
+    font-size: 3vw;
+    transition: 600ms;
+    opacity: 1;
+  }
+}
+@media (min-width: 770px) {
+  .first-container {
+    background-color: #eeeeee;
+  }
+  .first-container .first-container-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .first-container .first-container-wrapper .three {
+    display: flex;
+    flex-direction: row;
+  }
+  .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h3, .first-container .first-container-wrapper h4 {
+    font-weight: 2vw;
+    font-size: 5vw;
+    color: #777777;
+    padding-bottom: 1px;
+    border-bottom: #99E2D0 solid 2px;
+    width: 10%;
+    margin-left: 6vw;
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
+}
+@media (min-width: 770px) and (min-width: 770px) {
+  .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h2, .first-container .first-container-wrapper h3, .first-container .first-container-wrapper h4 {
+    font-size: 2vw;
+    color: #777777;
+    padding-bottom: 1px;
+    border-bottom: #99E2D0 solid 2px;
+    width: 4%;
+    margin-left: 6vw;
+  }
+}
+@media (min-width: 770px) {
+  .first-container .first-container-wrapper .container {
+    position: relative;
+    background-color: white;
+    border-radius: 20px;
+    width: 30%;
+    height: 7vw;
+    margin: 1vw;
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    overflow: hidden;
+    cursor: pointer;
+    opacity: 1;
+    animation-name: fadein;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-duration: 2s;
+    margin-left: 2vw;
+  }
+  @keyframes fadein {
+    0% {
+      opacity: 0;
+    }
+    80% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  .first-container .first-container-wrapper .container:hover {
+    transform: scale(1.08);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+  }
+  .first-container .first-container-wrapper .container:hover .check {
+    transition: 0.3s;
+    right: 0;
+    transition: 500ms ease-in-out;
+  }
+  .first-container .first-container-wrapper .container:hover .check i.fas {
+    transform: rotate(360deg);
+    transition: 500ms linear;
+  }
+  .first-container .first-container-wrapper .container:hover > .price {
+    right: 8vw;
+  }
+  .first-container .first-container-wrapper .container:hover > .sub {
+    width: 50%;
+  }
+  .first-container .first-container-wrapper .container .check {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 100%;
+    position: absolute;
+    right: -150px;
+    font-size: 8vw;
+    margin-left: 75vw;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    border: none;
+    color: white;
+    background-color: #99E2D0;
+    font-size: 3vw;
+  }
+}
+@media (min-width: 770px) {
+  .first-container .first-container-wrapper p {
+    margin: 1vw;
+    margin-left: 3vw;
+  }
+}
+@media (min-width: 770px) {
+  .first-container .first-container-wrapper .bold {
+    margin-top: 0.9vw;
+    font-weight: bolder;
+    font-size: 1.4vw;
+    display: flex;
+    justify-content: flex-start;
+  }
+}
+@media (min-width: 770px) {
+  .first-container .first-container-wrapper .sub {
+    width: 80%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 1vw;
+  }
+}
+@media (min-width: 770px) {
+  .first-container .first-container-wrapper .price {
+    font-size: 1vw;
+    font-weight: bolder;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    width: 10%;
+    position: absolute;
+    top: 3.5vw;
+    right: 4vw;
+  }
+}
 .select {
   /*-----------------------------------TABLETTE-------------*/
+  /*------------------DESKTOP----------------------*/
 }
 @media (max-width: 498px) {
   .select {
@@ -704,8 +1110,16 @@ header .logo {
     padding-bottom: 50px;
   }
 }
+@media (min-width: 770px) {
+  .select {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+}
 
-/*------------------DESKTOP----------------------*/
 @media (max-width: 498px) {
   .end {
     background-color: #424242;
@@ -752,10 +1166,10 @@ header .logo {
     justify-content: center;
     margin: 0;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 10px;
   }
   .end h3 img {
-    transform: scale(1.5);
+    transform: scale(1.2);
   }
   .end ul {
     margin-right: 10vw;
@@ -768,7 +1182,7 @@ header .logo {
     list-style: none;
     margin: 5vw;
     color: white;
-    font-size: 4vw;
+    font-size: 3vw;
   }
   .end ul i.fas {
     color: white;
@@ -810,7 +1224,7 @@ header .logo {
     list-style: none;
     margin: 2vw;
     color: white;
-    font-size: 1vw;
+    font-size: 1.5vw;
     width: 25vw;
   }
   .end ul i.fas {
