--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,4 @@
-/*./dart-sass/sass sass/style2.scss style2.css --watch-*/
+/*./dart-sass/sass sass/style2.scss style2.css --watch*/
 * {
   scroll-behavior: smooth;
   transition: 0.3s;
