--- a/sass/layout/_header2.scss
+++ b/sass/layout/_header2.scss
@@ -174,7 +174,8 @@ transform: scale(1.2);
     span{
         display:block;
         width: 20px;
-        margin-right: 35vw;
+        margin-left: 6vw;
+        margin-right: 32vw;
     }
 
    
