--- a/style.css
+++ b/style.css
@@ -59,23 +59,43 @@ html img, body img {
   }
 }
 
-.explorer {
-  color: floralwhite;
-  font-weight: bold;
-  width: 50%;
-  height: 11vw;
-  border-radius: 40px;
-  border: none;
-  align-self: center;
-  background: linear-gradient(#FF79DA, #9356DC);
-  font-size: 3.5vw;
+@media (max-width: 498px) {
+  .explorer {
+    color: floralwhite;
+    font-weight: bold;
+    width: 50%;
+    height: 11vw;
+    border-radius: 40px;
+    border: none;
+    align-self: center;
+    background: linear-gradient(#FF79DA, #9356DC);
+    font-size: 3.5vw;
+  }
+  .explorer:hover {
+    filter: brightness(125%);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+    transform: scale(1.05);
+  }
 }
-.explorer:hover {
-  filter: brightness(125%);
-  box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
-  transform: scale(1.05);
+/*---------------------TABLETTE--------------------------------*/
+@media (min-width: 497px) and (max-width: 769px) {
+  .explorer {
+    color: floralwhite;
+    font-weight: 100;
+    width: 50%;
+    height: 11vw;
+    border-radius: 40px;
+    border: none;
+    align-self: center;
+    background: linear-gradient(#FF79DA, #9356DC);
+    font-size: 3vw;
+  }
+  .explorer:hover {
+    filter: brightness(125%);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+    transform: scale(1.05);
+  }
 }
-
 /*---------------------DESKTOP------------------*/
 @media (min-width: 770px) {
   .explorer {
@@ -134,10 +154,13 @@ html img, body img {
     position: absolute;
     color: white;
     content: counter(item);
-    height: 25px;
-    width: 25px;
+    height: 20px;
+    width: 20px;
+    display: flex;
     vertical-align: top;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     background: #9356DC;
     border-radius: 20px;
     margin-right: 63vw;
@@ -152,7 +175,7 @@ html img, body img {
   }
   .top:hover {
     background-color: #f2eafb;
-    transform: scale(1.08);
+    transform: scale(1.05);
     box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
   }
   .top:hover i.fas, .top:hover i.fa {
@@ -177,7 +200,7 @@ html img, body img {
   ol {
     list-style: none;
     counter-reset: item;
-    font-size: 3.5vw;
+    font-size: 3vw;
   }
 
   .top {
@@ -188,7 +211,7 @@ html img, body img {
     box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
     border-radius: 20px;
     width: 70%;
-    height: 100px;
+    height: 9vw;
     margin: 15px;
     display: flex;
     justify-content: center;
@@ -205,7 +228,7 @@ html img, body img {
     text-align: center;
     background: #9356DC;
     border-radius: 20px;
-    margin-right: 63vw;
+    margin-right: 65vw;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -217,7 +240,7 @@ html img, body img {
   }
   .top:hover {
     background-color: #f2eafb;
-    transform: scale(1.08);
+    transform: scale(1.05);
     box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
   }
   .top:hover i.fas, .top:hover i.fa {
@@ -286,7 +309,7 @@ html img, body img {
   }
   .top:hover {
     background-color: #f2eafb;
-    transform: scale(1.08);
+    transform: scale(1.05);
     box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
   }
   .top:hover i.fas, .top:hover i.fa {
@@ -500,7 +523,7 @@ header .logo {
     text-overflow: ellipsis;
   }
   .place form input::placeholder {
-    font-size: 4vw;
+    font-size: 3vw;
   }
 
   .first-container-wrapper {
@@ -534,7 +557,7 @@ header .logo {
     text-align: center;
     color: #636363;
     width: 80%;
-    font-size: 3vw;
+    font-size: 2vw;
   }
 
   .explorer {
@@ -750,7 +773,7 @@ header .logo {
     justify-content: center;
     align-content: center;
     position: relative;
-    padding-left: 42vw;
+    padding-left: 40vw;
     height: 10vw;
     width: 10vw;
     border: none;
@@ -815,7 +838,7 @@ header .logo {
     top: 3vw;
     left: 19vw;
     background: linear-gradient(#FF79DA, #9356DC);
-    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
   .card .figcap .heart i.fas:hover {
@@ -922,7 +945,7 @@ header .logo {
     justify-content: center;
     align-content: center;
     position: relative;
-    padding-left: 42vw;
+    padding-left: 40vw;
     height: 10vw;
     width: 10vw;
     border: none;
@@ -987,7 +1010,7 @@ header .logo {
     top: 3vw;
     left: 19vw;
     background: linear-gradient(#FF79DA, #9356DC);
-    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
   .card button i.fas:hover {
@@ -1011,7 +1034,7 @@ header .logo {
 @media (min-width: 499px) and (max-width: 769px) {
   .card p {
     font-weight: 800;
-    font-size: 3vw;
+    font-size: 2.5vw;
     margin: 0;
     margin-left: 3vw;
     margin-top: 15px;
@@ -1023,7 +1046,7 @@ header .logo {
     font-weight: 500;
     color: #6b6b6b;
     margin-top: 1vw;
-    font-size: 2.9vw;
+    font-size: 2vw;
     width: 70%;
     position: relative;
   }
@@ -1143,7 +1166,7 @@ header .logo {
     justify-content: center;
     align-content: center;
     position: relative;
-    padding-left: 42vw;
+    padding-left: 40vw;
     height: 10vw;
     width: 10vw;
     border: none;
@@ -1208,7 +1231,7 @@ header .logo {
     top: 3vw;
     left: 19vw;
     background: linear-gradient(#FF79DA, #9356DC);
-    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
   .card button i.fas:hover {
@@ -1319,9 +1342,9 @@ header .logo {
   }
   .end ul li {
     list-style: none;
-    margin: 5vw;
+    margin: 2vw;
     color: white;
-    font-size: 3vw;
+    font-size: 2.5vw;
   }
   .end ul i.fas {
     color: white;
