--- a/style.css
+++ b/style.css
@@ -1297,9 +1297,9 @@ header .logo {
     margin: 0;
     padding-top: 20px;
     margin-left: 5vw;
-  }
-  .end h3 img {
-    transform: scale(0.8);
+    color: aliceblue;
+    font-family: "Shrikhand", cursive;
+    font-size: 8vw;
   }
   .end li {
     list-style: none;
@@ -1329,9 +1329,9 @@ header .logo {
     margin: 0;
     padding-top: 50px;
     padding-bottom: 10px;
-  }
-  .end h3 img {
-    transform: scale(1.2);
+    color: aliceblue;
+    font-family: "Shrikhand", cursive;
+    font-size: 7vw;
   }
   .end ul {
     margin-right: 10vw;
@@ -1368,9 +1368,9 @@ header .logo {
     margin: 0;
     padding-top: 3vw;
     padding-bottom: 0.5vw;
-  }
-  .end h3 img {
-    transform: scale(1);
+    color: aliceblue;
+    font-family: "Shrikhand", cursive;
+    font-size: 3vw;
   }
   .end ul {
     display: flex;
